Bug fixes
- width of resume game that was too large on large screens
- subtle message modifications
- added a 'fair' attribute in order to avoid bringing the well
every time if player chooses to win or loose fairly

--- a/style/style.css
+++ b/style/style.css
@@ -104,12 +104,14 @@ svg{
 
 .choice {
   display: flex;
+  justify-content: center ;
   gap: 1rem;
   width: 100%;
 }
 
-.try {
-  flex-grow: 1;
+.try, 
+.buy {
+  width: 50%;
 }
 
 footer {
